# small-expectations

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  docs.yml  validation.yml
0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
0.2.0/advanced/: index.html
0.2.0/api/backends/: index.html
0.2.0/api/cli/: index.html
0.2.0/api/runner/: index.html
0.2.0/api/sqltests/: index.html
0.2.0/cli/: index.html
0.2.0/configuration/: index.html
0.2.0/connections/: index.html
0.2.0/search/: search_index.json
docs/: advanced.md  cli.md  configuration.md  connections.md  index.md
docs/api/: backends.md  cli.md  runner.md  sqltests.md
src/smallex/: __init__.py  cli.py  runner.py  sqltests.py  types.py
src/smallex/backends/: __init__.py  base.py  databricks.py  snowflake.py  sqlite.py
tests/: test_backends.py  test_cli.py  test_sqlite_integration.py  test_sqltests.py
tests/sql/: 01_no_empty_emails.sql  01_test_users.sql  02_no_null_emails.sql  02_test_orders.sql  03_test_products.sql
