[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "small-expectations"
version = "0.2.2"
description = "Run SQL expectation checks against a database."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name="Jordi Puig Rabat", email="jordipuig37@gmail.com"}
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "databricks-sql-connector>=3.0.0",
  "snowflake-connector-python>=3.0.0",
  "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "flake8>=7.0.0",
  "mypy>=1.10.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.25.0",
  "mike>=2.1.0",
]

[project.scripts]
smallex = "smallex.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
pretty = true
show_error_codes = true
warn_unused_ignores = true
exclude = ["^build/", "^dist/"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[[tool.mypy.overrides]]
module = ["tomli", "pytest", "_pytest.*"]
ignore_missing_imports = true
